<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="10dp" >

    <com.jozibear247_cab.component.MyFontEdittextView
        android:id="@+id/etRefCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/text_enter_ref_code"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/dimen_history_one"
        android:paddingRight="@dimen/dimen_history_one"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:capitalize="characters" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <com.jozibear247_cab.component.MyFontButton
            android:id="@+id/btnSkip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="0.5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_small"
            android:gravity="center"
            android:text="@string/text_skip"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_popup_big" />

        <com.jozibear247_cab.component.MyFontButton
            android:id="@+id/btnRefSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0.5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_small"
            android:gravity="center"
            android:text="@string/text_submit"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_popup_big" />
    </LinearLayout>

    <com.jozibear247_cab.component.MyFontTextView
        android:id="@+id/myFontTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="ADD REFERRAL CODE IF YOU HAVE ONE TO EARN FREE RIDES"
        android:gravity="center" 
        android:textColor="@color/orange"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

</RelativeLayout>